5.0.3 -> 5.0.4:
    - jbj: add SOURCERPM name at end-of-parse for --specfile queries and errmsg.
    - rse: add new C API function rpmuuidMake() for generating UUIDs of version 1, 3, 4 or 5
    - jbj: add toplevel lcov-foo Makefile targets. Current coverage at
	http://wraptastic.org/pub/jbj/rpm-5.0.DEVEL-lcov
    - jbj: add --enable-build-gcov for CFLAGS -fprofile-arcs -ftest-coverage.
    - jbj: hot-wire a top level "make check". noisy sanity check atm, todo++.
    - jbj: backport top level tests/* for "make check". No tests in Makefile
	SUBDIRS targets yet ...
    - jbj: disable loop unraveling error msgs for now. better needs to be done.
    - jbj: fix: rpm-python h['filenames'] needs tagName(0x54aafb71) to
	return "Filenames" in order to find the filepathsTag extension.
    - jbj: add a missing newline to a debug message.
    - jbj: revert rpmtsOpenDB on --checksig path, rely on the lazy open
	in rpmtsFindPubkey instead.
    - jbj: fix: rpm -qp returns NOKEY because rpmdb is not yet open. Do a lazy
	open in rpmtsFindPubkey.
    - jbj: python: fix: insure that ts.setProbFilter() return is initialized.
    - jbj: fix: --triggers segfault, don't depend on he->p.ptr = NULL after
	headerGet() failed return.
    - jbj: add RPMTAG_PACKAGESTAT, and store persistently in a rpmdb Header.
    - jbj: disable loop unraveling error msgs for now. better needs to be done.
    - jbj: rpmrepo: achieve {primary,filelists,other}.xml spew parity w createrepo.
    - jbj: rpmrepo: compute origin *.rpm file digest while reading.
    - jbj: preserve stat(2) & digest through headerReload().
    - jbj: get rid of copy-n-paste typos, add "l" type markers to rpmtag.h.
    - jbj: add RPMTAG_PACKAGEDIGEST extension as RPM_STRING_TYPE.
    - jbj: add digest of origin *.rpm to Header internal store.
    - jbj: add RPMTAG_PACKAGESIZE extension as RPM_UINT64_TYPE.
    - jbj: rework RPMTAG_PACKAGETIME extension as RPM_UINT64_TYPE.